<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gary.food_truck.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        app:srcCompat="@drawable/truck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioButton3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:text="@string/tv_seleccionarpedido"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="50dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="271dp" >

        <RadioButton
            android:id="@+id/rb_sandwich"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:text="@string/rb_sandwich" />

        <RadioButton
            android:id="@+id/rb_salchipapa"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/rb_salchipapa" />

        <RadioButton
            android:id="@+id/rb_pizza"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:text="@string/rb_pizza" />

        <RadioButton
            android:id="@+id/rb_hotdog"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:text="@string/rb_hotdog" />

        <RadioButton
            android:id="@+id/rb_bebida"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:text="@string/rb_bebida" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_pedir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pedir" />

</LinearLayout>
